# langchain_faiss_vectorindex

./: .env  config.yaml  document_chat.py  pyproject.toml  readme.md
faiss_db/: books.faiss  books.pkl
